--- a/tex_template/template.tex
+++ b/tex_template/template.tex
@@ -16,7 +16,7 @@
 	\includegraphics[height=\hauteur]{02.jpeg} &
 	\includegraphics[height=\hauteur]{03.jpeg}  \\
 	\includegraphics[height=\hauteur]{04.jpeg} &
-	%\includegraphics[height=\hauteur]{05.jpeg} &
+	\includegraphics[height=\hauteur]{05-webcam.jpeg} &
 	%\includegraphics[height=\hauteur]{06.jpeg} \\
 	%\includegraphics[height=\hauteur]{07.jpeg} &
 	%\includegraphics[height=\hauteur]{08.jpeg} &
