photo fix + tex template

--- a/tex_template/template.tex
+++ b/tex_template/template.tex
@@ -6,7 +6,7 @@
 \graphicspath{{tex_template/links/}}
 
 \newlength{\hauteur}
-\setlength{\hauteur}{300px}
+\setlength{\hauteur}{200px}
 
 
  
@@ -17,9 +17,9 @@
 	\includegraphics[height=\hauteur]{03.jpeg}  \\
 	\includegraphics[height=\hauteur]{04.jpeg} &
 	\includegraphics[height=\hauteur]{05-webcam.jpeg} &
-	%\includegraphics[height=\hauteur]{06.jpeg} \\
-	%\includegraphics[height=\hauteur]{07.jpeg} &
-	%\includegraphics[height=\hauteur]{08.jpeg} &
+	\includegraphics[height=\hauteur]{06.jpg} \\
+	\includegraphics[height=\hauteur]{06.jpg} &
+	\includegraphics[height=\hauteur]{06.jpg} &
 	%\includegraphics[height=\hauteur]{09.jpeg} \\
 \end{tabular}
 
