update after work on bach laptop

--- a/server/tex_template/template_float_img.tex
+++ b/server/tex_template/template_float_img.tex
@@ -14,7 +14,7 @@
 
 \setlength{\TPHorizModule}{1mm}
 \setlength{\TPVertModule}{1mm}
-\graphicspath{{links/}}
+\graphicspath{{tex_template/links/}}
 
 
 
@@ -32,7 +32,7 @@
 
 % >> documents%
 \begin{textblock*}{350mm}(-6mm,0mm)%
-	\includegraphics[height=420mm]{A4.jpg}
+	\includegraphics[height=420mm]{A4.png}
 \end{textblock*}
 
 % >> trace%
