--- a/server/tex_template/template_float_img.tex
+++ b/server/tex_template/template_float_img.tex
@@ -20,25 +20,16 @@
 
 \begin{document}
 
-% >> camera 2%
+% >> photo        %
 \begin{textblock*}{350mm}(-32mm,0mm)
-	\includegraphics[width=350mm]{cam01.jpg}
+	\includegraphics[width=350mm]{phone.jpeg}
 \end{textblock*}
 
-% >> camera 1%
-\begin{textblock*}{350mm}(-32mm,210mm)
-	\includegraphics[angle=0, width=350mm]{cam02.jpg}
-\end{textblock*}
-
-% >> documents%
+% >> documents    %
 \begin{textblock*}{350mm}(-6mm,0mm)%
-	\includegraphics[height=420mm]{A4.png}
+	\includegraphics[width=350mm]{table.png}
 \end{textblock*}
 
-% >> trace%
-\begin{textblock*}{350mm}(-6mm,0mm)%
-	\includegraphics[width=297mm]{A3.png}
-\end{textblock*}
 
 \TPMargin{3mm}
 \end{document}
